--- a/source/pic18x/test_cpc_pic18x/test_cpc_pic18x.lpi
+++ b/source/pic18x/test_cpc_pic18x/test_cpc_pic18x.lpi
@@ -70,7 +70,7 @@
         <IsPartOfProject Value="True"/>
       </Unit6>
       <Unit7>
-        <Filename Value="..\test_pic18x_compiler_main_form_unit.pas"/>
+        <Filename Value="test_pic18x_compiler_main_form_unit.pas"/>
         <IsPartOfProject Value="True"/>
         <HasResources Value="True"/>
       </Unit7>
