--- a/source/pic18x/config_bit_editor/pic18x_config_bit_editor.dproj
+++ b/source/pic18x/config_bit_editor/pic18x_config_bit_editor.dproj
@@ -24,10 +24,10 @@
     <DCC_DcuOutput>.\$(Platform)\$(Config)</DCC_DcuOutput>
     <DCC_ObjOutput>.\$(Platform)\$(Config)</DCC_ObjOutput>
     <DCC_HppOutput>.\$(Platform)\$(Config)</DCC_HppOutput>
-    <DCC_UnitSearchPath>..\..\lib;..\..\lib\fastmm;..\..\lib\mparith;..\..\lib\PerlRegEx;..\..\cpc_core;..\common</DCC_UnitSearchPath>
-    <DCC_ResourcePath>..\..\lib;..\..\lib\fastmm;..\..\lib\mparith;..\..\lib\PerlRegEx;..\..\cpc_core;..\common</DCC_ResourcePath>
-    <DCC_ObjPath>..\..\lib;..\..\lib\fastmm;..\..\lib\mparith;..\..\lib\PerlRegEx;..\..\cpc_core;..\common</DCC_ObjPath>
-    <DCC_IncludePath>..\..\lib;..\..\lib\fastmm;..\..\lib\mparith;..\..\lib\PerlRegEx;..\..\cpc_core;..\common</DCC_IncludePath>
+    <DCC_UnitSearchPath>..\..\lib;..\..\lib\fastmm;..\..\lib\mparith;..\..\lib\PerlRegEx;..\..\cpc_core;..\common;..\..\lib\about_credit_frame</DCC_UnitSearchPath>
+    <DCC_ResourcePath>..\..\lib;..\..\lib\fastmm;..\..\lib\mparith;..\..\lib\PerlRegEx;..\..\cpc_core;..\common;..\..\lib\about_credit_frame</DCC_ResourcePath>
+    <DCC_ObjPath>..\..\lib;..\..\lib\fastmm;..\..\lib\mparith;..\..\lib\PerlRegEx;..\..\cpc_core;..\common;..\..\lib\about_credit_frame</DCC_ObjPath>
+    <DCC_IncludePath>..\..\lib;..\..\lib\fastmm;..\..\lib\mparith;..\..\lib\PerlRegEx;..\..\cpc_core;..\common;..\..\lib\about_credit_frame</DCC_IncludePath>
     <DCC_DebugInformation>False</DCC_DebugInformation>
   </PropertyGroup>
   <ProjectExtensions>
@@ -37,10 +37,18 @@
 <BorlandProject><Delphi.Personality><Parameters><Parameters Name="UseLauncher">False</Parameters><Parameters Name="LoadAllSymbols">True</Parameters><Parameters Name="LoadUnspecifiedSymbols">False</Parameters></Parameters><VersionInfo><VersionInfo Name="IncludeVerInfo">True</VersionInfo><VersionInfo Name="AutoIncBuild">False</VersionInfo><VersionInfo Name="MajorVer">1</VersionInfo><VersionInfo Name="MinorVer">0</VersionInfo><VersionInfo Name="Release">0</VersionInfo><VersionInfo Name="Build">0</VersionInfo><VersionInfo Name="Debug">False</VersionInfo><VersionInfo Name="PreRelease">False</VersionInfo><VersionInfo Name="Special">False</VersionInfo><VersionInfo Name="Private">False</VersionInfo><VersionInfo Name="DLL">False</VersionInfo><VersionInfo Name="Locale">1033</VersionInfo><VersionInfo Name="CodePage">1252</VersionInfo></VersionInfo><VersionInfoKeys><VersionInfoKeys Name="CompanyName"></VersionInfoKeys><VersionInfoKeys Name="FileDescription"></VersionInfoKeys><VersionInfoKeys Name="FileVersion">1.0.0.0</VersionInfoKeys><VersionInfoKeys Name="InternalName"></VersionInfoKeys><VersionInfoKeys Name="LegalCopyright"></VersionInfoKeys><VersionInfoKeys Name="LegalTrademarks"></VersionInfoKeys><VersionInfoKeys Name="OriginalFilename"></VersionInfoKeys><VersionInfoKeys Name="ProductName"></VersionInfoKeys><VersionInfoKeys Name="ProductVersion">1.0.0.0</VersionInfoKeys><VersionInfoKeys Name="Comments"></VersionInfoKeys></VersionInfoKeys><Source><Source Name="MainSource">pic18x_config_bit_editor.dpr</Source></Source></Delphi.Personality></BorlandProject></BorlandProject>
   </ProjectExtensions>
   <Import Project="$(MSBuildBinPath)\Borland.Delphi.Targets" />
+  <PropertyGroup>
+    <PreBuildEvent>del pic18x_config_bit_editor.res</PreBuildEvent>
+    <PostBuildEvent>resourcehacker.exe -script resourcehacker_script.txt
+del pic18x_config_bit_editor.res</PostBuildEvent>
+  </PropertyGroup>
   <ItemGroup>
     <DelphiCompile Include="pic18x_config_bit_editor.dpr">
       <MainSource>MainSource</MainSource>
     </DelphiCompile>
+    <DCCReference Include="..\..\common\aboutbox_unit.pas">
+      <Form>AboutBoxForm</Form>
+    </DCCReference>
     <DCCReference Include="..\..\cpc_core\cpc_access_unit.pas" />
     <DCCReference Include="..\..\cpc_core\cpc_blocks_unit.pas" />
     <DCCReference Include="..\..\cpc_core\cpc_common_unit.pas" />
@@ -56,19 +64,21 @@
     <DCCReference Include="..\..\cpc_core\cpc_target_cpu_unit.pas" />
     <DCCReference Include="..\..\cpc_core\cpc_term_expression_unit.pas" />
     <DCCReference Include="..\..\cpc_core\cpc_types_unit.pas" />
-    <DCCReference Include="..\..\lib\about_credit_frame_unit.pas">
-      <Form>AboutCreditFrame</Form>
-      <DesignClass>TFrame</DesignClass>
+    <DCCReference Include="..\common\pic18x_aboutbox_unit.pas">
+      <Form>PIC18xAboutBoxForm</Form>
     </DCCReference>
     <DCCReference Include="..\common\pic18x_selection_dialog_unit.pas">
       <Form>Pic18xSelectionDialog</Form>
     </DCCReference>
-    <DCCReference Include="about_box_unit.pas">
-      <Form>AboutBox</Form>
+    <DCCReference Include="config_bit_editor_aboutbox_unit.pas">
+      <Form>ConfigBitEditorAboutBoxForm</Form>
     </DCCReference>
     <DCCReference Include="dummy_pic18x_cpu_unit.pas" />
     <DCCReference Include="main_form_unit.pas">
       <Form>MainForm</Form>
     </DCCReference>
+    <RcCompile Include="..\..\common\bitmaps_for_delphi.rc">
+      <Form>..\..\common\bitmaps_for_delphi.res</Form>
+    </RcCompile>
   </ItemGroup>
 </Project>
