--- a/source/pic18x/include_file_generator/pic18x_include_file_generator.dproj
+++ b/source/pic18x/include_file_generator/pic18x_include_file_generator.dproj
@@ -1,4 +1,4 @@
-﻿	<Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+	<Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
 		<PropertyGroup>
 			<ProjectGuid>{603DFA37-AB24-4F4C-BE53-2EF460490687}</ProjectGuid>
 			<ProjectVersion>14.6</ProjectVersion>
@@ -146,12 +146,11 @@
 			<DCCReference Include="..\..\cpc_core\cpc_target_cpu_unit.pas"/>
 			<DCCReference Include="..\..\cpc_core\cpc_term_expression_unit.pas"/>
 			<DCCReference Include="..\..\cpc_core\cpc_types_unit.pas"/>
-			<DCCReference Include="..\..\lib\about_credit_frame_unit.pas">
-				<Form>AboutCreditFrame</Form>
-				<DesignClass>TFrame</DesignClass>
+			<DCCReference Include="..\..\common\aboutbox_unit.pas">
+				<Form>AboutBoxForm</Form>
 			</DCCReference>
-			<DCCReference Include="about_box_unit.pas">
-				<Form>AboutBox</Form>
+			<DCCReference Include="pic18x_include_file_generator_aboutbox_unit.pas">
+				<Form>PIC18xIncludeFileGeneratorAboutBoxForm</Form>
 			</DCCReference>
 			<BuildConfiguration Include="Release">
 				<Key>Cfg_2</Key>
@@ -167,6 +166,11 @@
 		</ItemGroup>
 		<Import Condition="Exists('$(BDS)\Bin\CodeGear.Delphi.Targets')" Project="$(BDS)\Bin\CodeGear.Delphi.Targets"/>
 		<Import Condition="Exists('$(APPDATA)\Embarcadero\$(BDSAPPDATABASEDIR)\$(PRODUCTVERSION)\UserTools.proj')" Project="$(APPDATA)\Embarcadero\$(BDSAPPDATABASEDIR)\$(PRODUCTVERSION)\UserTools.proj"/>
+		<PropertyGroup>
+			<PreBuildEvent><![CDATA[del pic18x_include_file_generator.res]]></PreBuildEvent>
+			<PostBuildEvent><![CDATA[resourcehacker.exe -script resourcehacker_script.txt
+del pic18x_include_file_generator.res]]></PostBuildEvent>
+		</PropertyGroup>
 		<ProjectExtensions>
 			<Borland.Personality>Delphi.Personality.12</Borland.Personality>
 			<Borland.ProjectType/>
