--- a/source/pic18x/config_bit_editor/pic18x_config_bit_editor.lpi
+++ b/source/pic18x/config_bit_editor/pic18x_config_bit_editor.lpi
@@ -8,10 +8,11 @@
         <MainUnitHasUsesSectionForAllUnits Value="False"/>
         <MainUnitHasCreateFormStatements Value="False"/>
         <MainUnitHasTitleStatement Value="False"/>
+        <AlwaysBuild Value="True"/>
       </Flags>
       <SessionStorage Value="InProjectDir"/>
       <MainUnit Value="0"/>
-      <Title Value="run_pic18x_kernel_tests"/>
+      <Title Value="pic18x_config_bit_editor"/>
       <UseAppBundle Value="False"/>
       <ResourceType Value="res"/>
       <Icon Value="0"/>
@@ -42,33 +43,39 @@
         <PackageName Value="LCL"/>
       </Item1>
     </RequiredPackages>
-    <Units Count="42">
+    <Units Count="31">
       <Unit0>
-        <Filename Value="run_pic18x_kernel_tests.dpr"/>
+        <Filename Value="pic18x_config_bit_editor.dpr"/>
         <IsPartOfProject Value="True"/>
       </Unit0>
       <Unit1>
-        <Filename Value="..\..\cpc_core\cpc_access_unit.pas"/>
+        <Filename Value="main_form_unit.pas"/>
         <IsPartOfProject Value="True"/>
+        <ComponentName Value="MainForm"/>
+        <HasResources Value="True"/>
+        <ResourceBaseClass Value="Form"/>
       </Unit1>
       <Unit2>
-        <Filename Value="..\..\cpc_core\cpc_blocks_unit.pas"/>
+        <Filename Value="..\common\pic18x_common_unit.pas"/>
         <IsPartOfProject Value="True"/>
       </Unit2>
       <Unit3>
-        <Filename Value="..\..\cpc_core\cpc_common_unit.pas"/>
+        <Filename Value="..\common\pic18x_selection_dialog_unit.pas"/>
         <IsPartOfProject Value="True"/>
+        <ComponentName Value="Pic18xSelectionDialog"/>
+        <HasResources Value="True"/>
+        <ResourceBaseClass Value="Form"/>
       </Unit3>
       <Unit4>
-        <Filename Value="..\..\cpc_core\cpc_constant_expression_unit.pas"/>
+        <Filename Value="..\..\lib\LibXmlParser.pas"/>
         <IsPartOfProject Value="True"/>
       </Unit4>
       <Unit5>
-        <Filename Value="..\..\cpc_core\cpc_core_objects_unit.pas"/>
+        <Filename Value="..\..\cpc_core\cpc_definitions_unit.pas"/>
         <IsPartOfProject Value="True"/>
       </Unit5>
       <Unit6>
-        <Filename Value="..\..\cpc_core\cpc_definitions_unit.pas"/>
+        <Filename Value="dummy_pic18x_cpu_unit.pas"/>
         <IsPartOfProject Value="True"/>
       </Unit6>
       <Unit7>
@@ -76,158 +83,117 @@
         <IsPartOfProject Value="True"/>
       </Unit7>
       <Unit8>
-        <Filename Value="..\..\cpc_core\cpc_main_compiler_unit.pas"/>
+        <Filename Value="..\..\lib\regular_expression_unit.pas"/>
         <IsPartOfProject Value="True"/>
       </Unit8>
       <Unit9>
-        <Filename Value="..\..\cpc_core\cpc_multi_precision_integer_unit.pas"/>
+        <Filename Value="..\..\cpc_core\cpc_source_analysis_unit.pas"/>
         <IsPartOfProject Value="True"/>
       </Unit9>
       <Unit10>
-        <Filename Value="..\..\cpc_core\cpc_simple_expression_unit.pas"/>
+        <Filename Value="..\..\lib\LibXmlComps.pas"/>
         <IsPartOfProject Value="True"/>
       </Unit10>
       <Unit11>
-        <Filename Value="..\..\cpc_core\cpc_source_analysis_unit.pas"/>
+        <Filename Value="..\..\cpc_core\cpc_access_unit.pas"/>
         <IsPartOfProject Value="True"/>
       </Unit11>
       <Unit12>
-        <Filename Value="..\..\cpc_core\cpc_statements_unit.pas"/>
+        <Filename Value="..\..\cpc_core\cpc_blocks_unit.pas"/>
         <IsPartOfProject Value="True"/>
       </Unit12>
       <Unit13>
-        <Filename Value="..\..\cpc_core\cpc_target_cpu_unit.pas"/>
+        <Filename Value="..\..\cpc_core\cpc_common_unit.pas"/>
         <IsPartOfProject Value="True"/>
       </Unit13>
       <Unit14>
-        <Filename Value="..\..\cpc_core\cpc_term_expression_unit.pas"/>
+        <Filename Value="..\..\cpc_core\cpc_constant_expression_unit.pas"/>
         <IsPartOfProject Value="True"/>
       </Unit14>
       <Unit15>
-        <Filename Value="..\..\cpc_core\cpc_types_unit.pas"/>
+        <Filename Value="..\..\cpc_core\cpc_core_objects_unit.pas"/>
         <IsPartOfProject Value="True"/>
       </Unit15>
       <Unit16>
-        <Filename Value="..\pic18x_access_unit.pas"/>
+        <Filename Value="..\..\cpc_core\cpc_main_compiler_unit.pas"/>
         <IsPartOfProject Value="True"/>
       </Unit16>
       <Unit17>
-        <Filename Value="..\pic18x_assignment_statement_unit.pas"/>
+        <Filename Value="..\..\cpc_core\cpc_multi_precision_integer_unit.pas"/>
         <IsPartOfProject Value="True"/>
       </Unit17>
       <Unit18>
-        <Filename Value="..\pic18x_blocks_unit.pas"/>
+        <Filename Value="..\..\cpc_core\cpc_simple_expression_unit.pas"/>
         <IsPartOfProject Value="True"/>
       </Unit18>
       <Unit19>
-        <Filename Value="..\pic18x_core_objects_unit.pas"/>
+        <Filename Value="..\..\cpc_core\cpc_statements_unit.pas"/>
         <IsPartOfProject Value="True"/>
       </Unit19>
       <Unit20>
-        <Filename Value="..\pic18x_cpu_unit.pas"/>
+        <Filename Value="..\..\cpc_core\cpc_target_cpu_unit.pas"/>
         <IsPartOfProject Value="True"/>
       </Unit20>
       <Unit21>
-        <Filename Value="..\pic18x_expressions_unit.pas"/>
+        <Filename Value="..\..\cpc_core\cpc_term_expression_unit.pas"/>
         <IsPartOfProject Value="True"/>
       </Unit21>
       <Unit22>
-        <Filename Value="..\pic18x_floating_point_unit.pas"/>
+        <Filename Value="..\..\cpc_core\cpc_types_unit.pas"/>
         <IsPartOfProject Value="True"/>
       </Unit22>
       <Unit23>
-        <Filename Value="..\pic18x_instruction_simulation_test_unit.pas"/>
+        <Filename Value="..\..\lib\mparith\mp_base.pas"/>
         <IsPartOfProject Value="True"/>
       </Unit23>
       <Unit24>
-        <Filename Value="..\pic18x_instructions_unit.pas"/>
+        <Filename Value="..\..\lib\mparith\mp_types.pas"/>
         <IsPartOfProject Value="True"/>
       </Unit24>
       <Unit25>
-        <Filename Value="..\pic18x_kernel_unit.pas"/>
+        <Filename Value="..\..\lib\mparith\btypes.pas"/>
         <IsPartOfProject Value="True"/>
+        <UnitName Value="BTypes"/>
       </Unit25>
       <Unit26>
-        <Filename Value="..\pic18x_macro_instructions_unit.pas"/>
+        <Filename Value="..\..\lib\mparith\mp_prng.pas"/>
         <IsPartOfProject Value="True"/>
       </Unit26>
       <Unit27>
-        <Filename Value="..\pic18x_main_compiler_unit.pas"/>
+        <Filename Value="..\..\lib\mparith\isaac.pas"/>
         <IsPartOfProject Value="True"/>
+        <UnitName Value="ISAAC"/>
       </Unit27>
       <Unit28>
-        <Filename Value="..\pic18x_microprocessor_information_unit.pas"/>
+        <Filename Value="..\..\lib\wirth_balanced_binary_tree_unit.pas"/>
         <IsPartOfProject Value="True"/>
       </Unit28>
       <Unit29>
-        <Filename Value="..\pic18x_multiply_divide_unit.pas"/>
+        <Filename Value="..\..\lib\dijkstra_smoothsort_unit.pas"/>
         <IsPartOfProject Value="True"/>
       </Unit29>
       <Unit30>
-        <Filename Value="..\pic18x_run_time_error_check_unit.pas"/>
-        <IsPartOfProject Value="True"/>
-      </Unit30>
-      <Unit31>
-        <Filename Value="..\pic18x_simple_expression_unit.pas"/>
-        <IsPartOfProject Value="True"/>
-      </Unit31>
-      <Unit32>
-        <Filename Value="..\pic18x_statements_unit.pas"/>
-        <IsPartOfProject Value="True"/>
-      </Unit32>
-      <Unit33>
-        <Filename Value="..\pic18x_string_unit.pas"/>
-        <IsPartOfProject Value="True"/>
-      </Unit33>
-      <Unit34>
-        <Filename Value="..\pic18x_term_expression_unit.pas"/>
-        <IsPartOfProject Value="True"/>
-      </Unit34>
-      <Unit35>
-        <Filename Value="..\pic18x_types_unit.pas"/>
-        <IsPartOfProject Value="True"/>
-      </Unit35>
-      <Unit36>
-        <Filename Value="..\test_pic18x_compiler_unit.pas"/>
-        <IsPartOfProject Value="True"/>
-      </Unit36>
-      <Unit37>
-        <Filename Value="..\test_pic18x_subroutines_unit.pas"/>
-        <IsPartOfProject Value="True"/>
-      </Unit37>
-      <Unit38>
-        <Filename Value="..\test_pic18x_kernel_unit.pas"/>
-        <IsPartOfProject Value="True"/>
-      </Unit38>
-      <Unit39>
-        <Filename Value="..\test_pic18x_compiler_main_form_unit.pas"/>
+        <Filename Value="config_bit_editor_aboutbox_unit.pas"/>
         <IsPartOfProject Value="True"/>
         <HasResources Value="True"/>
-      </Unit39>
-      <Unit40>
-        <Filename Value="..\test_pic18x_simulator_unit.pas"/>
-        <IsPartOfProject Value="True"/>
-      </Unit40>
-      <Unit41>
-        <Filename Value="..\common\pic18x_common_unit.pas"/>
-        <IsPartOfProject Value="True"/>
-      </Unit41>
+      </Unit30>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
     <Version Value="11"/>
     <PathDelim Value="\"/>
     <Target>
-      <Filename Value="..\..\..\bin\run_pic18x_kernel_tests"/>
+      <Filename Value="..\..\..\bin\pic18x_config_bit_editor"/>
     </Target>
     <SearchPaths>
-      <IncludeFiles Value="$(ProjOutDir)"/>
-      <OtherUnitFiles Value="..\..\lib;..\..\lib\mparith;..\common"/>
+      <IncludeFiles Value="..\common;..\..\lib;..\..\cpc_core;..\..\lib\mparith;$(ProjOutDir)"/>
+      <OtherUnitFiles Value="..\..\lib;..\common;..\..\cpc_core;..\..\lib\mparith"/>
       <UnitOutputDirectory Value="obj"/>
     </SearchPaths>
     <Parsing>
       <SyntaxOptions>
         <SyntaxMode Value="Delphi"/>
+        <CStyleOperator Value="False"/>
         <IncludeAssertionCode Value="True"/>
       </SyntaxOptions>
     </Parsing>
@@ -236,18 +202,20 @@
         <IOChecks Value="True"/>
         <RangeChecks Value="True"/>
         <OverflowChecks Value="True"/>
-        <StackChecks Value="True"/>
       </Checks>
-      <VerifyObjMethodCallValidity Value="True"/>
     </CodeGeneration>
+    <Linking>
+      <Options>
+        <Win32>
+          <GraphicApplication Value="True"/>
+        </Win32>
+      </Options>
+    </Linking>
     <Other>
-      <CustomOptions Value="-dBorland
--dVer150
--dDelphi7
--dCompiler6_Up
--dPUREPASCAL
--dINCLUDE_SIMULATION
--dCONSOLE_TEST_MODE"/>
+      <Verbosity>
+        <ShowHints Value="False"/>
+      </Verbosity>
+      <CustomOptions Value="-dBorland -dVer150 -dDelphi7 -dCompiler6_Up -dPUREPASCAL"/>
     </Other>
   </CompilerOptions>
   <Debugging>
