--- a/source/pic18x/test_cpc_pic18x/test_cpc_pic18x.lpi
+++ b/source/pic18x/test_cpc_pic18x/test_cpc_pic18x.lpi
@@ -10,6 +10,10 @@
       <ResourceType Value="res"/>
       <UseXPManifest Value="True"/>
       <Icon Value="0"/>
+      <Resources Count="2">
+        <Resource_0 FileName="..\..\common\cp_logo.bmp" Type="BITMAP" ResourceName="CP_LOGO"/>
+        <Resource_1 FileName="..\..\common\lazarus_logo.bmp" Type="BITMAP" ResourceName="LAZARUS_LOGO"/>
+      </Resources>
     </General>
     <i18n>
       <EnableI18N LFM="False"/>
