--- a/source/cpc_core/test_cpc_core/test_cpc_core.dproj
+++ b/source/cpc_core/test_cpc_core/test_cpc_core.dproj
@@ -38,7 +38,7 @@
   </ProjectExtensions>
   <Import Project="$(MSBuildBinPath)\Borland.Delphi.Targets" />
   <PropertyGroup>
-    <PreBuildEvent>del test_cpc_core.res</PreBuildEvent>
+    <PreBuildEvent>copy /y res\*.* .</PreBuildEvent>
     <PostBuildEvent>resourcehacker.exe -script resourcehacker_script.txt
 del test_cpc_core.res</PostBuildEvent>
   </PropertyGroup>
