--- a/source/pic18x/run_pic18x_simulator_tests/run_pic18x_simulator_tests.dproj
+++ b/source/pic18x/run_pic18x_simulator_tests/run_pic18x_simulator_tests.dproj
@@ -37,7 +37,7 @@
   </ProjectExtensions>
   <Import Project="$(MSBuildBinPath)\Borland.Delphi.Targets" />
   <PropertyGroup>
-    <PreBuildEvent>del run_pic18x_simulator_tests.res</PreBuildEvent>
+    <PreBuildEvent>copy /y res\*.* .</PreBuildEvent>
     <PostBuildEvent>resourcehacker.exe -script resourcehacker_script.txt
 del run_pic18x_simulator_tests.res</PostBuildEvent>
   </PropertyGroup>
